Optimised SEO by adding description, keywords and changed title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Favourite Recipe Challenge</title>
+        <meta name="description"
+            content="Learn how to make creamy samp and beef stew with this traditional South African recipe. Easy-to-follow ingredients and method.">
+        <meta name="keywords" content="recipe, samp, beef stew, South African recipe, creamy samp, traditional dish">
+        <title>Creamy Samp and Beef Stew: Traditional South African Recipe</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
