Added a star rating section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,24 @@
         </div>
     </section>
 
+    <section id="rating-section" class="rating-container">
+        <h3>Rate this recipe</h3>
+        <div class="stars">
+            <span class="star" data-value="1">&#9734;</span>
+            <span class="star" data-value="2">&#9734;</span>
+            <span class="star" data-value="3">&#9734;</span>
+            <span class="star" data-value="4">&#9734;</span>
+            <span class="star" data-value="5">&#9734;</span>
+            <p class="feedback">Click a star to rate!</p>
+        </div>
+
+    </section>
+
+<footer>This website was created by Jinoveva Lopes and is open-sourced on
+    <a href="https://github.com/Jinoveva/shecodes-recipe-challenge">Github</a>
+    and hosted on
+    <a href="https://shecodes-recipe-challenge.netlify.app/">Netlify</a>
+</footer>
 </body>
 
 </html>
