Added a checklist for my ingredients section

--- a/index.html
+++ b/index.html
@@ -57,16 +57,41 @@
             </div>
             <div class="col-6">
                 <h3 id="ingredients">Ingredients</h3>
-                <ul>
-                    <li class="ingredients">2kg stewing beef, cut into cubes</li>
-                    <li class="ingredients">3 tbsp olive oil</li>
-                    <li class="ingredients">2 cubes beef stock</li>
-                    <li class="ingredients">4 cups water</li>
-                    <li class="ingredients">2 carrots chopped</li>
-                    <li class="ingredients">3 large potatoes, peeled and cubed</li>
-                    <li class="ingredients">1 large onion, chopped</li>
-                    <li class="ingredients">1 canned chopped tomatoes</li>
-                </ul>
+            <ul class="ingredients-list">
+                <li>
+                    <input type="checkbox" class="ingredient-checkbox" id="ingredient1">
+                    <label for="ingredient1">2kg stewing beef, cut into cubes</label>
+                </li>
+                <li>
+                    <input type="checkbox" class="ingredient-checkbox" id="ingredient2">
+                    <label for="ingredient2">3 tbsp olive oil</label>
+                </li>
+                <li>
+                    <input type="checkbox" class="ingredient-checkbox" id="ingredient3">
+                    <label for="ingredient3">2 cubes beef stock</label>
+                </li>
+                <li>
+                    <input type="checkbox" class="ingredient-checkbox" id="ingredient4">
+                    <label for="ingredient4">4 cups water</label>
+                </li>
+                <li>
+                    <input type="checkbox" class="ingredient-checkbox" id="ingredient5">
+                    <label for="ingredient5">2 carrots chopped</label>
+                </li>
+                <li>
+                    <input type="checkbox" class="ingredient-checkbox" id="ingredient6">
+                    <label for="ingredient6">3 large potatoes, peeled and cubed</label>
+                </li>
+                <li>
+                    <input type="checkbox" class="ingredient-checkbox" id="ingredient7">
+                    <label for="ingredient7">1 large onion chopped</label>
+                </li>
+                <li>
+                    <input type="checkbox" class="ingredient-checkbox" id="ingredient8">
+                    <label for="ingredient8">1 canned chopped tomatoes</label>
+                </li>
+            </ul>
+
             </div>
         </div>
     </section>
@@ -123,9 +148,9 @@
     </section>
 
 <footer>This website was created by Jinoveva Lopes and is open-sourced on
-    <a href="https://github.com/Jinoveva/shecodes-recipe-challenge">Github</a>
+    <a href="https://github.com/Jinoveva/shecodes-recipe-challenge" target="_blank">Github</a>
     and hosted on
-    <a href="https://shecodes-recipe-challenge.netlify.app/">Netlify</a>
+    <a href="https://shecodes-recipe-challenge.netlify.app/" target="_blank">Netlify</a>
 </footer>
 </body>
 
