Addd a collapsible section for my method

--- a/index.html
+++ b/index.html
@@ -102,34 +102,34 @@
         <h3 id="method">Method</h3>
         <div class="row">
             <div class="col-6">
-                <h5 id="samp">For Samp:</h5>
-                <ol>
-                    <li>Wash the samp.</li>
-                    <li>Once you have washed the samp, place in a bowl and leave to soak overnight. *Soak in 1L of cold
-                        water.</li>
-                    <li>Cooking samp: Drain soaked samp and place in a pot. Add enough boiling water to cover the samp.
-                    </li>
-                    <li>Bring to a boil. Once boiling, reduce heat and simmer for two hours or until soft. Stir every 30
-                        minutes. Add water when necessary.</li>
-                    <li>In a bowl, add powdered milk, cream, mushroom soup, and cheddar sauce with 100 ml of hot water
-                        and mix until it forms a paste. Once the paste is formed, add another 150 ml of water. Add to
-                        your samp.</li>
-                    <li>Add margarine and Aromat and stir.</li>
-                    <li>Simmer for 20 minutes. Stir occasionally until you get a creamy texture.</li>
-                </ol>
+                <h5 id="samp" class="collapsible">For Samp:</h5>
+                <div class="content">
+                    <ol>
+                        <li>Wash the samp.</li>
+                        <li>Once you have washed the samp, place in a bowl and leave to soak overnight. *Soak in 1L of cold water.</li>
+                        <li>Cooking samp: Drain soaked samp and place in a pot. Add enough boiling water to cover the samp.</li>
+                        <li>Bring to a boil. Once boiling, reduce heat and simmer for two hours or until soft. Stir every 30 minutes.
+                            Add water when necessary.</li>
+                        <li>In a bowl, add powdered milk, cream, mushroom soup, and cheddar sauce with 100 ml of hot water and mix until
+                            it forms a paste. Once the paste is formed, add another 150 ml of water. Add to your samp.</li>
+                        <li>Add margarine and Aromat and stir.</li>
+                        <li>Simmer for 20 minutes. Stir occasionally until you get a creamy texture.</li>
+                    </ol>
+                </div>
             </div>
             <div class="col-6">
-                <h5 id="beef-stew">For Beef Stew:</h5>
-                <ol>
-                    <li>Heat oil over medium heat. Brown the beef for 3 – 4 minutes on all sides. Set aside.</li>
-                    <li>Sweat the onions and carrots in the same pot, deglaze with wine or stock to scrape off burned
-                        beef bits.</li>
-                    <li>Add the beef back into the pot and dissolve stock cubes in 500 g of water then pour over the
-                        beef.</li>
-                    <li>Simmer for two hours.</li>
-                    <li>Add potatoes, tomato paste, and Worcestershire sauce.</li>
-                    <li>Simmer for 60 – 90 minutes on low heat until tender.</li>
-                </ol>
+                <h5 id="beef-stew" class="collapsible">For Beef Stew:</h5>
+                <div class="content">
+                    <ol>
+                        <li>Heat oil over medium heat. Brown the beef for 3 – 4 minutes on all sides. Set aside.</li>
+                        <li>Sweat the onions and carrots in the same pot, deglaze with wine or stock to scrape off burned beef bits.
+                        </li>
+                        <li>Add the beef back into the pot and dissolve stock cubes in 500 g of water then pour over the beef.</li>
+                        <li>Simmer for two hours.</li>
+                        <li>Add potatoes, tomato paste, and Worcestershire sauce.</li>
+                        <li>Simmer for 60 – 90 minutes on low heat until tender.</li>
+                    </ol>
+                </div>
             </div>
         </div>
     </section>
