Went back to prev code

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description"
-            content="Learn how to make creamy samp and beef stew with this traditional South African recipe. Easy-to-follow ingredients and method.">
-        <meta name="keywords" content="recipe, samp, beef stew, South African recipe, creamy samp, traditional dish">
-        <title>Creamy Samp and Beef Stew: Traditional South African Recipe</title>
+    <meta name="description"
+        content="Learn how to make creamy samp and beef stew with this traditional South African recipe. Easy-to-follow ingredients and method.">
+    <meta name="keywords" content="recipe, samp, beef stew, South African recipe, creamy samp, traditional dish">
+    <title>Creamy Samp and Beef Stew: Traditional South African Recipe</title>
     <link rel="stylesheet" href="index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -59,40 +57,40 @@
             </div>
             <div class="col-6">
                 <h3 id="ingredients">Ingredients</h3>
-            <ul class="ingredients-list">
-                <li>
-                    <input type="checkbox" class="ingredient-checkbox" id="ingredient1">
-                    <label for="ingredient1">2kg stewing beef, cut into cubes</label>
-                </li>
-                <li>
-                    <input type="checkbox" class="ingredient-checkbox" id="ingredient2">
-                    <label for="ingredient2">3 tbsp olive oil</label>
-                </li>
-                <li>
-                    <input type="checkbox" class="ingredient-checkbox" id="ingredient3">
-                    <label for="ingredient3">2 cubes beef stock</label>
-                </li>
-                <li>
-                    <input type="checkbox" class="ingredient-checkbox" id="ingredient4">
-                    <label for="ingredient4">4 cups water</label>
-                </li>
-                <li>
-                    <input type="checkbox" class="ingredient-checkbox" id="ingredient5">
-                    <label for="ingredient5">2 carrots chopped</label>
-                </li>
-                <li>
-                    <input type="checkbox" class="ingredient-checkbox" id="ingredient6">
-                    <label for="ingredient6">3 large potatoes, peeled and cubed</label>
-                </li>
-                <li>
-                    <input type="checkbox" class="ingredient-checkbox" id="ingredient7">
-                    <label for="ingredient7">1 large onion chopped</label>
-                </li>
-                <li>
-                    <input type="checkbox" class="ingredient-checkbox" id="ingredient8">
-                    <label for="ingredient8">1 canned chopped tomatoes</label>
-                </li>
-            </ul>
+                <ul class="ingredients-list">
+                    <li>
+                        <input type="checkbox" class="ingredient-checkbox" id="ingredient1">
+                        <label for="ingredient1">2kg stewing beef, cut into cubes</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="ingredient-checkbox" id="ingredient2">
+                        <label for="ingredient2">3 tbsp olive oil</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="ingredient-checkbox" id="ingredient3">
+                        <label for="ingredient3">2 cubes beef stock</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="ingredient-checkbox" id="ingredient4">
+                        <label for="ingredient4">4 cups water</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="ingredient-checkbox" id="ingredient5">
+                        <label for="ingredient5">2 carrots chopped</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="ingredient-checkbox" id="ingredient6">
+                        <label for="ingredient6">3 large potatoes, peeled and cubed</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="ingredient-checkbox" id="ingredient7">
+                        <label for="ingredient7">1 large onion chopped</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" class="ingredient-checkbox" id="ingredient8">
+                        <label for="ingredient8">1 canned chopped tomatoes</label>
+                    </li>
+                </ul>
 
             </div>
         </div>
@@ -108,12 +106,17 @@
                 <div class="content">
                     <ol>
                         <li>Wash the samp.</li>
-                        <li>Once you have washed the samp, place in a bowl and leave to soak overnight. *Soak in 1L of cold water.</li>
-                        <li>Cooking samp: Drain soaked samp and place in a pot. Add enough boiling water to cover the samp.</li>
-                        <li>Bring to a boil. Once boiling, reduce heat and simmer for two hours or until soft. Stir every 30 minutes.
+                        <li>Once you have washed the samp, place in a bowl and leave to soak overnight. *Soak in 1L of
+                            cold water.</li>
+                        <li>Cooking samp: Drain soaked samp and place in a pot. Add enough boiling water to cover the
+                            samp.</li>
+                        <li>Bring to a boil. Once boiling, reduce heat and simmer for two hours or until soft. Stir
+                            every 30 minutes.
                             Add water when necessary.</li>
-                        <li>In a bowl, add powdered milk, cream, mushroom soup, and cheddar sauce with 100 ml of hot water and mix until
-                            it forms a paste. Once the paste is formed, add another 150 ml of water. Add to your samp.</li>
+                        <li>In a bowl, add powdered milk, cream, mushroom soup, and cheddar sauce with 100 ml of hot
+                            water and mix until
+                            it forms a paste. Once the paste is formed, add another 150 ml of water. Add to your samp.
+                        </li>
                         <li>Add margarine and Aromat and stir.</li>
                         <li>Simmer for 20 minutes. Stir occasionally until you get a creamy texture.</li>
                     </ol>
@@ -124,9 +127,11 @@
                 <div class="content">
                     <ol>
                         <li>Heat oil over medium heat. Brown the beef for 3 – 4 minutes on all sides. Set aside.</li>
-                        <li>Sweat the onions and carrots in the same pot, deglaze with wine or stock to scrape off burned beef bits.
+                        <li>Sweat the onions and carrots in the same pot, deglaze with wine or stock to scrape off
+                            burned beef bits.
                         </li>
-                        <li>Add the beef back into the pot and dissolve stock cubes in 500 g of water then pour over the beef.</li>
+                        <li>Add the beef back into the pot and dissolve stock cubes in 500 g of water then pour over the
+                            beef.</li>
                         <li>Simmer for two hours.</li>
                         <li>Add potatoes, tomato paste, and Worcestershire sauce.</li>
                         <li>Simmer for 60 – 90 minutes on low heat until tender.</li>
@@ -149,11 +154,11 @@
 
     </section>
 
-<footer>This website was created by Jinoveva Lopes and is open-sourced on
-    <a href="https://github.com/Jinoveva/shecodes-recipe-challenge" target="_blank">Github</a>
-    and hosted on
-    <a href="https://shecodes-recipe-challenge.netlify.app/" target="_blank">Netlify</a>
-</footer>
+    <footer>This website was created by Jinoveva Lopes and is open-sourced on
+        <a href="https://github.com/Jinoveva/shecodes-recipe-challenge" target="_blank">Github</a>
+        and hosted on
+        <a href="https://shecodes-recipe-challenge.netlify.app/" target="_blank">Netlify</a>
+    </footer>
 </body>
 
 </html>
