Went back to prev code

--- a/index.html
+++ b/index.html
@@ -106,17 +106,16 @@
                 <div class="content">
                     <ol>
                         <li>Wash the samp.</li>
-                        <li>Once you have washed the samp, place in a bowl and leave to soak overnight. *Soak in 1L of
-                            cold water.</li>
-                        <li>Cooking samp: Drain soaked samp and place in a pot. Add enough boiling water to cover the
-                            samp.</li>
-                        <li>Bring to a boil. Once boiling, reduce heat and simmer for two hours or until soft. Stir
-                            every 30 minutes.
-                            Add water when necessary.</li>
-                        <li>In a bowl, add powdered milk, cream, mushroom soup, and cheddar sauce with 100 ml of hot
-                            water and mix until
-                            it forms a paste. Once the paste is formed, add another 150 ml of water. Add to your samp.
+                        <li>Once you have washed the samp, place in a bowl and leave to soak overnight. *Soak in 1L of cold
+                            water.</li>
+                        <li>Cooking samp: Drain soaked samp and place in a pot. Add enough boiling water to cover the samp.
                         </li>
+                        <li>Bring to a boil. Once boiling, reduce heat and simmer for two hours or until soft. Stir every 30
+                            minutes.
+                            Add water when necessary.</li>
+                        <li>In a bowl, add powdered milk, cream, mushroom soup, and cheddar sauce with 100 ml of hot water
+                            and mix until
+                            it forms a paste. Once the paste is formed, add another 150 ml of water. Add to your samp.</li>
                         <li>Add margarine and Aromat and stir.</li>
                         <li>Simmer for 20 minutes. Stir occasionally until you get a creamy texture.</li>
                     </ol>
