--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <li>Simmer for 20 minutes. Stir occasionally until you get a creamy texture.</li>
                     </ol>
                 </div>
-            </div>
+            </div>s
             <div class="col-6">
                 <h5 id="beef-stew" class="collapsible">For Beef Stew:</h5>
                 <div class="content">
@@ -139,6 +139,7 @@
             </div>
         </div>
     </section>
+    <!---come back to make it interactive with JS-->
 
     <section id="rating-section" class="rating-container">
         <h3>Rate this recipe</h3>
@@ -150,8 +151,8 @@
             <span class="star" data-value="5">&#9734;</span>
             <p class="feedback">Click a star to rate!</p>
         </div>
-
     </section>
+    <!--- Come back to fix the hovering of stars: Hover effect for the current star and previous ones */-->
 
     <footer>This website was created by Jinoveva Lopes and is open-sourced on
         <a href="https://github.com/Jinoveva/shecodes-recipe-challenge" target="_blank">Github</a>
