Added "steaming" animation to img

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="col-6">
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/155/584/original/IMG_1046.jpeg?1737736845"
                     alt="Creamy Samp" class="img-fluid">
+                    <div class="steam"></div> <!-- edited in css-->
                 <section class="left-half">
                     <div class="icons">
                         <div>🍴</div>
@@ -120,7 +121,7 @@
                         <li>Simmer for 20 minutes. Stir occasionally until you get a creamy texture.</li>
                     </ol>
                 </div>
-            </div>s
+            </div>
             <div class="col-6">
                 <h5 id="beef-stew" class="collapsible">For Beef Stew:</h5>
                 <div class="content">
