--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         and hosted on
         <a href="https://shecodes-recipe-challenge.netlify.app/" target="_blank">Netlify</a>
     </footer>
+    <script src="index.js"></script>
 </body>
 
 </html>
