Added a comment section

--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
     </section>
     <!--- Come back to fix the hovering of stars: Hover effect for the current star and previous ones */-->
 
+   <legend> Leave a comment!
+    <input type="text" name="comment" id="comment">
+   </legend>
+
     <footer>This website was created by Jinoveva Lopes and is open-sourced on
         <a href="https://github.com/Jinoveva/shecodes-recipe-challenge" target="_blank">Github</a>
         and hosted on
