--- a/index.html
+++ b/index.html
@@ -155,9 +155,17 @@
     </section>
     <!--- Come back to fix the hovering of stars: Hover effect for the current star and previous ones */-->
 
-   <legend> Leave a comment!
-    <input type="text" name="comment" id="comment">
-   </legend>
+<form action="submit" id="commentForm">
+    <fieldset>
+        <legend> Leave a comment
+            <input type="text" id="comment">
+        </legend>
+        <div id="submitContainer">
+            <input type="submit" id="submitBtn" value="Submit">
+        </div>
+    </fieldset>
+
+</form>
 
     <footer>This website was created by Jinoveva Lopes and is open-sourced on
         <a href="https://github.com/Jinoveva/shecodes-recipe-challenge" target="_blank">Github</a>
